--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Queen-s-cadet-and-other-tales_69500
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69500-h/images/img-cover.jpg
 creator:
   author:
     agent_name: Grant, James
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/8949
     wikipedia: https://en.wikipedia.org/wiki/James_Grant_(1822%E2%80%931887)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69500#The-Queen-s-cadet-and-other-tales
 gutenberg_issued: '2022-12-08'
 identifiers:
   gutenberg: '69500'
